--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.4",
     "@types/styled-theming": "^2.2.5",
     "graphql": "^15.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "styled-components": "^5.2.1",
     "styled-theming": "^2.2.0",
@@ -26,7 +28,12 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "coverage": "react-scripts test --collectCoverage",
+    "eject": "react-scripts eject",
+    "format": "prettier --list-different 'src/**/*.{js,jsx,ts,tsx,json,htm,html}'",
+    "format:fix": "prettier --write 'src/**/*.{js,jsx,ts,tsx,json,htm,html}'",
+    "lint": "eslint src/ --ext .ts,.tsx,.js,.jsx",
+    "lint:fix": "eslint src/ --ext .ts,.tsx,.js,.jsx --fix"
   },
   "eslintConfig": {
     "extends": [
@@ -57,9 +64,9 @@
     }
   },
   "lint-staged": {
-    "src/*.{json,js,jsx,ts,tsx}": [
-      "yarn format:fix",
-      "yarn lint:fix"
+    "src/**/*.{json,js,jsx,ts,tsx}": [
+      "npm run format:fix",
+      "npm run lint:fix"
     ]
   }
 }
